<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Cloud9</string>
    <string name="ok">OK</string>
    <string name="error_getting_data">Error getting data , do you want to try again?</string>
    <string name="retry">Retry</string>
    <string name="no">Cancel</string>
    <string name="yes">Yes</string>
    <string name="try_again">Try Again</string>
    <string name="login">Login</string>
    <string name="visits">Visits</string>
    <string name="visit">Visit</string>
    <string name="company">Company</string>
    <string name="products">Products</string>
    <string name="recommendations">Recommendations</string>
    <string name="signature">Signature</string>
    <string name="media">Media</string>
    <string name="status_reason">Status-Reason:</string>
    <string name="visit_date">Visit Date:</string>
    <string name="from_time">From Time:</string>
    <string name="to_time">To time:</string>
    <string name="duration">Duration:</string>
    <string name="company_p">Company:</string>
    <string name="actual_arrival_time">Actual arrival time:</string>
    <string name="actual_duration_time">Actual duration time:</string>
    <string name="actual_completed_time">Actual completed time:</string>
    <string name="remark">Remark:</string>
    <string name="save">Save</string>
    <string name="email">Email:</string>
    <string name="website">Website:</string>
    <string name="phone">Phone:</string>
    <string name="fax">Fax:</string>
    <string name="contact_name">Contact name:</string>
    <string name="contact_number">Contact number:</string>
    <string name="address">Address:</string>
    <string name="company_name">Company name:</string>
    <string name="client_signature">Client signature</string>
    <string name="clear">CLEAR</string>
    <string name="employee_signature">Employee Signature</string>
    <string name="unit">Unit:</string>
    <string name="sn">SN:</string>
    <string name="quantity">Quantity:</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="name">Name:</string>
    <string name="serial_number_1">Serial Number 1:</string>
    <string name="serial_number">Serial Number</string>
    <string name="subject">Subject:</string>
    <string name="description">Description:</string>
    <string name="assign_to">Assign to:</string>
    <string name="due_date">Due date:</string>
    <string name="product">--Product--</string>
    <string name="fill_details">Please fill details</string>
    <string name="you_wanna_delete">Are you sure you want to delete ?</string>
    <string name="less_than_5">Subject should be at least 5 charcters</string>
    <string name="sure_delete_media">Are you sure you want to delete media item ?</string>
    <string name="home">Home</string>
    <string name="all_tasks">All tasks</string>
    <string name="permission_background_android">This app collects location data to enable admin app tracking visit feature ,even when the app is closed or not in use.\n\n  If you want to enable these features please press \'Ok\'.\n\n By pressing \'Cancel\' the admin will not be able to track your location.</string>
    <string name="log_out">Log out</string>
    <string name="sure_logout">Are you sure you wanna logout ?</string>
    <string name="location_updates_disabled">Orders flagged on track will not send updates to client because you disabled location updates</string>
    <string name="location_updates_disabled_arr">Orders flagged on track will not send updates to client because you disabled location updates</string>
    <string name="are_you_sure_exit">Are you sure you want to leave the Cloud9?</string>
    <string name="cancel">Cancel</string>
    <string name="test_text">Text Test</string>
    <string name="no_products_added_yet">No products added yet</string>
    <string name="no_tasks_added_yet">No tasks added yet</string>
    <string name="no_attachments_to_show">No attachments to show</string>
    <string name="product_name_p">Product Name:</string>
    <string name="client_name_p">Client Name:</string>
    <string name="contact_name_p">Contact Name:</string>
    <string name="contract_number_p">Contract Number:</string>
    <string name="fax_p">Fax:</string>
    <string name="site_location_p">Site Location:</string>
    <string name="grant_settings_permission">You have to grant permission manually in settings</string>
    <string name="date_p">Date:</string>
    <string name="opportunity_p">Opportunity:</string>
    <string name="matco_eng_p">Matco Eng:</string>
    <string name="n_a">N/A</string>
    <string name="contact_number_p">Contact Number:</string>
    <string name="update">Update</string>
    <string name="task">Task</string>
    <string name="email_invalid">Invalid Email</string>
    <string name="no_records">No records added yet</string>
    <string name="_select_">--Select--</string>
    <string name="completed">Completed</string>
    <string name="no_data">No Data</string>
    <string name="collecting_loc">Collecting location data</string>
    <string name="grant_setting_perm">Please grant permission from settings.</string>
    <string name="auth_error">Authentication Error</string>
    <string name="please_grant_permission">Please grant permission via Setting!</string>
    <string name="failure">Failure</string>
    <string name="loc_callback_removed">Location Callback removed.</string>
    <string name="failed_rremove_loc">Failed to remove Location Callback.</string>
    <string name="visit_succ">Visit updated successfully</string>
    <string name="go_back">Go Back</string>
    <string name="visit_arrived_completed">Visit has not arrived , or is already completed.</string>
    <string name="not_saved_signature">You haven\'t saved your signature! \nClick \"Go Back\" to go back and save it , or click cancel to discard it</string>
    <string name="task_deleted_successfully">Task deleted successfully!</string>
    <string name="gps_settings">GPS disabled , do you want to turn it on through settings ?</string>
    <string name="update_message">New version is available, please update</string>

    <string name="update_cancel">Cancel</string>
    <string name="quantity_more_0">Quantity should not be 0</string>
    <string name="custom_product_name">Custom Product Name</string>
    <string name="custom_product_description">Custom Product Description</string>
    <string name="signature_completed">After saving the signature, the visit will be marked as complete, and you will not be able to edit it. Are you sure you want to continue?</string>
    <string name="empty_report">Empty report</string>
    <string name="network_message">No network available, please check your WiFi or Data connection</string>
    <string name="related_visits">Related Visits</string>
    <string name="visit_address">Visit Address</string>
    <string name="sending_location">SENDING LOCATION</string>
    <string name="get_directions">GET DIRECTIONS</string>
    <string name="sending_location_vist">SENDING VISIT LOCATION</string>
</resources>