<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_marginTop="@dimen/normal_margin"
    android:layout_marginBottom="@dimen/width_250"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:foreground="?android:attr/selectableItemBackground"
        android:id="@+id/btClose"
        android:padding="@dimen/big_margin_padding"
        android:layout_width="@dimen/button_height"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginTop="@dimen/normal_margin"
        android:src="@drawable/close_x"
        android:tint="@color/white" />

    <com.ids.cloud9.custom.CustomTextViewMedium
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginStart="@dimen/margin_30"
        android:id="@+id/tvWelcome"
        android:textSize="@dimen/title_font"
        android:textColor="@color/gray_text_color"
        android:layout_height="wrap_content"
        android:text="Welcome, "/>


    <com.ids.cloud9.custom.CustomTextViewMedium
        android:layout_width="match_parent"
        android:text="@string/home"
        android:layout_marginTop="@dimen/normal_margin_padding"
        android:paddingStart="@dimen/normal_margin_padding"
        android:visibility="gone"
        android:id="@+id/tvHome"
        android:gravity="center_vertical"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_marginStart="@dimen/button_height"
        android:layout_marginEnd="@dimen/button_height"
        android:textColor="@color/white"
        android:layout_height="@dimen/edit_text_height"/>


    <com.ids.cloud9.custom.CustomTextViewMedium
        android:id="@+id/tvAllTasks"
        android:paddingStart="@dimen/normal_margin_padding"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginStart="@dimen/button_height"
        android:layout_marginTop="@dimen/normal_margin_padding"
        android:layout_marginEnd="@dimen/button_height"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:text="@string/all_tasks"
        android:textColor="@color/white" />

    <LinearLayout
        android:paddingStart="@dimen/normal_margin_padding"
        android:gravity="center_vertical"
        android:id="@+id/llLogout"
        android:layout_marginTop="@dimen/normal_margin_padding"
        android:layout_marginEnd="@dimen/button_height"
        android:layout_marginBottom="@dimen/normal_margin"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_marginStart="@dimen/button_height"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height">


        <ImageView
            android:tint="@color/white"
            android:layout_width="@dimen/list_icon_width_height"
            android:layout_height="@dimen/list_icon_width_height"
            android:src="@drawable/power_off"/>

        <com.ids.cloud9.custom.CustomTextViewMedium
            android:layout_width="match_parent"
            android:text="@string/log_out"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/mini_radius"
            android:textColor="@color/white"
            android:layout_height="match_parent"/>

    </LinearLayout>


    <LinearLayout
        android:layout_marginStart="@dimen/button_height"
        android:layout_marginEnd="@dimen/button_height"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="@dimen/normal_margin_padding"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_50">

        <com.ids.cloud9.custom.CustomTextViewBold
            android:text="English"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:id="@+id/btEnglish"
            android:layout_marginEnd="@dimen/normal_margin_padding"
            android:layout_weight="1"
            android:textColor="@color/medium_blue"
            android:background="@drawable/rounded_white"
            android:textSize="@dimen/normal_font"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_40"/>


        <com.ids.cloud9.custom.CustomTextViewBold
            android:text="عربي"
            android:id="@+id/btArabic"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:layout_marginStart="@dimen/normal_margin_padding"
            android:textColor="@color/white"
            android:background="@drawable/rounded_border_white"
            android:textSize="@dimen/normal_font"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="@dimen/height_40"/>

    </LinearLayout>




</LinearLayout>